# blacknot

./: CMakeLists.txt  LICENSE  README.md
dep/include/SDL/: SDL_config_windows.h
dep/lib/win/Debug/: SDL2.lib  SDL2main.lib
dep/lib/win/Release/: SDL2.lib  SDL2main.lib
include/blacknot/: __template__.hpp  allocator.hpp  allocator.inline.hpp  array.hpp  array.inline.hpp  assert.hpp  common.hpp  config.hpp  configuration_file.hpp  engine.hpp  engine_common.hpp  gfx.hpp  macros.hpp  memory.hpp  parsers.hpp  stream.hpp  string.hpp  string.inline.hpp  string_util.hpp  types.hpp  win32_memory.hpp
src/blacknot/: __template__.cpp  allocator.cpp  assert.cpp  configuration_file.cpp  engine.cpp  engine_common.cpp  gfx.cpp  image.cpp  main.cpp  memory_win32.cpp  parsers.cpp  resource.cpp  resource_compiler.cpp  sdl_wrapper.cpp  sprite.cpp  stb_wrapper.cpp  stream.cpp  string_util.cpp  types.cpp  util.cpp  win32_memory.cpp
src/tests/: test_first_main.cpp  test_sdlblit_main.cpp
